# langgraph-brain

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: config.py  graph.py  nodes.py  nodes_gen.py  prompts.py  reranker.py  state.py
data/processed/eval_runs/: comparison_metrics.json  v1_8b_metrics.json
eval/: dataset.py  pipeline.py  run_comparison.py  run_eval.py  score_comparison.py  score_eval.py
ingestion/: chunking.py  cleaning.py  fetch_docs.py  fetch_issues.py  fetch_prs.py  github_client.py
mcp_server/: retrieval.py  server.py
scripts/: build_index.py  ingest_docs.py  ingest_issues.py  ingest_prs.py  process_all.py  run_agent.py  test_comparison.py  test_eval_run.py  test_mcp.py  test_nodes.py  test_rerank.py  test_search.py
storage/: metadata_db.py  trust_score.py  vector_store.py
tests/: test_config.py  test_imports.py
