[project]
name = "langgraph-brain"
version = "0.1.0"
description = "Company Brain over the LangGraph repo: agentic RAG with MCP, trust scoring, RAGAS eval, and human-in-the-loop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "voyageai>=0.3",
    "sentence-transformers>=3.0",
    "fastmcp>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "markdown-it-py>=3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"